--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "build": "tsc"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "babel-preset-env": "^1.7.0"
   },
   "devDependencies": {
-    "eslint": "^4.19.1"
+    "eslint": "^4.19.1",
+    "typescript": "^3.1.2"
   }
 }
