--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
   "scripts": {
     "build": "tsc"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run build"
+    }
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "babel-preset-env": "^1.7.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
+    "husky": "^1.1.2",
     "typescript": "^3.1.2"
   }
 }
