--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "husky": "^1.1.2",
+    "prettier": "1.14.3",
     "typescript": "^3.1.2"
   }
 }
