--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "devDependencies": {
     "eslint": "^4.19.1",
+    "eslint-plugin-typescript": "^0.12.0",
     "husky": "^1.1.2",
     "prettier": "1.14.3",
-    "typescript": "^3.1.2"
+    "typescript": "^3.1.2",
+    "typescript-eslint-parser": "^20.0.0"
   }
 }
