--- a/package.json
+++ b/package.json
@@ -11,17 +11,25 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run build"
+      "pre-commit": "lint-staged && npm run build"
     }
+  },
+  "lint-staged": {
+    "*{js,json,css,md,ts}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "eslint-config-prettier": "^3.1.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-plugin-typescript": "^0.12.0",
     "husky": "^1.1.2",
+    "lint-staged": "^7.3.0",
     "prettier": "1.14.3",
     "typescript": "^3.1.2",
     "typescript-eslint-parser": "^20.0.0"
